module-5/Homework/task3/app-ingress-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-ingress-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: billing
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/instance: ingress-nginx
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
